[package]
name = "cabac"
version = "0.8.0"
edition = "2021"

description = "Context-adaptive binary arithmetic coding library"
readme = "README.md"
repository = "https://github.com/mcroomp/cabac"
license = "LGPL-3.0-or-later"
exclude = [ "tests/*" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug=true

[dependencies]
byteorder = "1.4"

[dev-dependencies]
criterion = "0.5"

[lib]

[[bench]]
name = "benches"
harness = false