[package]
name = "cabac"
version = "0.12.1"
edition = "2021"

description = "Context-adaptive binary arithmetic coding library"
readme = "README.md"
repository = "https://github.com/mcroomp/cabac"
license = "LGPL-3.0-or-later"
exclude = [ "tests/*" ]
categories = ["compression", "multimedia::encoding"]
keywords = ["cabac", "arithmetic-coding", "lossless", "compression"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug=true

[dependencies]
byteorder = "1.4"
bytemuck = "1.11"
wide = { version = "0.7", optional = true }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[lib]

[[bench]]
name = "benches"
harness = false

[features]
# simd is still slower than non-simd... work in progress
default = []
simd = ["dep:wide"]
